--- a/.cargo/config
+++ b/.cargo/config
@@ -3,3 +3,5 @@ wasm = "build --release --lib --target wasm32-unknown-unknown"
 schema = "run --bin build-schema"
 optimize = "run-script optimize"
 optimize-m1 = "run-script optimize-m1"
+test-tube = "test --package cl-vault --lib -- --include-ignored test_tube:: --nocapture"
+test-tube-build = "build --release --lib --target  wasm32-unknown-unknown --target-dir ./test-tube-build"
